# cookiecutter_pytorch_cpp

./: README.md
{{ cookiecutter.repo_name }}/: CMakeLists.txt
{{ cookiecutter.repo_name }}/src/: calculator.cpp  main.cpp
